feat(enrollment): implement PayU payment webhook with hash verification, enrollment creation, and email receipts
- Add POST /api/enrollments/payments/webhook with full S2S webhook processing
- Fix reverse hash formula to include udf1: salt|status||||||udf1|email|firstname|productinfo|amount|txnid|key
- Add idempotency check to prevent duplicate enrollment/email on retries
- Update PaymentTransaction on webhook: mihpayid, mode, bankRefNum, status, completedAt
- Update EnrollmentFormResponse: paymentStatus, verifiedAt, payuResponse (JSON), bankRefNum
- Auto-enroll student via UserClient.registerUser + EnrollmentService.bulkAssign on success
- Send HTML receipt email with PDF attachment on payment success
- Send failure email with error details and support CTA on payment failure
- Add sendFailureEmail() to EmailService
- Fix PdfService compile errors: import LineSeparator and java.awt.Color
- Add EmailService, PdfService, EmailController new files
- Disable mail health indicator to prevent actuator DOWN on missing SMTP credentials
- Add GMAIL_USER, GMAIL_APP_PASSWORD, PAYU_WEBHOOK_ALLOWED_IPS env vars to docker-compose
- Set PayU credentials as env var defaults in application.properties
- Add bankRefNum, verifiedAt, payuResponse fields to EnrollmentFormResponse entity